--- a/index.html
+++ b/index.html
@@ -37,10 +37,20 @@
     </div>
     <footer>
       2022 &copy; Johannes Kirchner - Computer Extra, Ernst & Jacob KG
-      <a href="http://" target="_blank" rel="noopener noreferrer">Impressum</a>
-      <a href="http://" target="_blank" rel="noopener noreferrer"
-        >Datenschutz</a
-      >
+      <div class="x">
+        <a
+          href="https://computer-extra.de/impressum/"
+          target="_blank"
+          rel="noopener noreferrer"
+          >Impressum</a
+        >
+        <a
+          href="https://computer-extra.de/datenschutz/"
+          target="_blank"
+          rel="noopener noreferrer"
+          >Datenschutz</a
+        >
+      </div>
     </footer>
   </body>
 </html>
